--- a/fact_index/src/pages/FactDatabase/FactDetail.module.scss
+++ b/fact_index/src/pages/FactDatabase/FactDetail.module.scss
@@ -143,3 +143,9 @@
     padding: 0.7rem 0.1rem;
   }
 }
+.context {
+  font-size: 0.95rem;
+  line-height: 1.5;
+  margin-top: 0.2em;
+  margin-bottom: 0.2em;
+}
