--- a/fact_index/src/pages/FactDatabase/SidebarFilters.module.scss
+++ b/fact_index/src/pages/FactDatabase/SidebarFilters.module.scss
@@ -138,3 +138,34 @@ input[type="date"] {
     padding-bottom: 4em;
   }
 }
+.selectInput {
+  background: var(--theme-color-bg-white);
+  border: 1.5px solid var(--theme-color-border-input);
+  border-radius: 8px;
+  color: var(--theme-color-text);
+  padding: 0.5em 0.8em;
+  font-size: 1.08em;
+  width: 100%;
+  min-height: 44px; // For touch accessibility
+  box-sizing: border-box;
+  margin-top: 2px;
+  margin-bottom: 0.6em;
+  transition: border 0.14s, background 0.14s;
+
+  &:focus {
+    border-color: var(--theme-color-border-focus);
+    outline: none;
+    background: var(--theme-color-bg-neutral);
+  }
+
+  // Remove browser default arrow and style our own
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image:
+    url("data:image/svg+xml,%3Csvg width='16' height='10' viewBox='0 0 16 10' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 2l7 7 7-7' stroke='%23333' stroke-width='2' fill='none' fill-rule='evenodd'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 0.7em center;
+  background-size: 1.2em;
+  cursor: pointer;
+}
