--- a/fact_index/src/style/_color.scss
+++ b/fact_index/src/style/_color.scss
@@ -1,6 +1,5 @@
-@use 'color_themes/light.scss';
-@use 'color_themes/dark.scss';
-@use 'color_themes/accessibility.scss';
+@use "color_themes/light.scss";
+@use "color_themes/dark.scss";
 
 // Mixin: Outputs CSS variables for a theme map inside a block
 @mixin theme-vars($theme) {
@@ -21,46 +20,3 @@
   }
 }
 
-// Low contrast themes
-@media (prefers-contrast: less) {
-  :root { @include theme-vars(accessibility.$theme_light_low_contrast); }
-}
-@media (prefers-color-scheme: dark) and (prefers-contrast: less) {
-  :root { @include theme-vars(accessibility.$theme_dark_low_contrast); }
-}
-
-// High contrast themes
-@media (prefers-contrast: more) {
-  :root { @include theme-vars(accessibility.$theme_light_high_contrast); }
-}
-@media (prefers-color-scheme: dark) and (prefers-contrast: more) {
-  :root { @include theme-vars(accessibility.$theme_dark_high_contrast); }
-}
-
-// Forced colors
-@media (forced-colors: active) {
-  :root { @include theme-vars(accessibility.$theme_forced_colors_light); }
-}
-@media (prefers-color-scheme: dark) and (forced-colors: active) {
-  :root { @include theme-vars(accessibility.$theme_forced_colors_dark); }
-}
-
-// Inverted colors (for accessibility tools)
-@media (prefers-color-scheme: light) and (inverted-colors: inverted) and (prefers-contrast: more) {
-  :root { @include theme-vars(accessibility.$theme_inverted_colours_high_contrast); }
-}
-@media (prefers-color-scheme: dark) and (inverted-colors: inverted) and (prefers-contrast: more) {
-  :root { @include theme-vars(accessibility.$theme_inverted_colours_high_contrast); }
-}
-@media (prefers-color-scheme: light) and (inverted-colors: inverted) and (prefers-contrast: less) {
-  :root { @include theme-vars(accessibility.$theme_inverted_colours_low_contrast); }
-}
-@media (prefers-color-scheme: dark) and (inverted-colors: inverted) and (prefers-contrast: less) {
-  :root { @include theme-vars(accessibility.$theme_inverted_colours_low_contrast); }
-}
-@media (prefers-color-scheme: light) and (inverted-colors: inverted) {
-  :root { @include theme-vars(accessibility.$theme_dark_inverted_colours); }
-}
-@media (prefers-color-scheme: dark) and (inverted-colors: inverted) {
-  :root { @include theme-vars(accessibility.$theme_dark_inverted_colours); }
-}
