--- a/fact_index/src/atoms/Chip.module.scss
+++ b/fact_index/src/atoms/Chip.module.scss
@@ -1,5 +1,5 @@
 // Chip.module.scss
-@use '../style/mixins' as *;
+@use "../style/mixins" as *;
 @use "../style/color" as colors;
 
 // Chips container
@@ -32,7 +32,10 @@
   box-shadow: 0 1px 2px var(--theme-shadow-1);
   line-height: 1.15;
   white-space: pre;
-  transition: background 0.16s, color 0.16s, border 0.16s;
+  transition:
+    background 0.16s,
+    color 0.16s,
+    border 0.16s;
   vertical-align: middle;
 }
 
